main_community page done linking almost there

--- a/main.html
+++ b/main.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="main.css"/>
+<script src="main.js"></script>
 <html>
     <title>
         Byte | Home
@@ -10,12 +11,12 @@
                 <div class = "headercontent">
                     <div class="headerhome">
                         <div class="websitelogo">
-                            <img src="./images main/byte_logo.png"/>
-                            <span class = "link"> <a style = "color: beige; text-decoration: none" href = "google.com"> byte. </a> </span>
+                            <a href="./main.html"><img src="./images main/byte_logo.png"/></a>
+                            <span class = "link"> <a style = "color: beige; text-decoration: none" href = "./main.html"> byte. </a> </span>
                         </div>
                     </div>
                     <div class="headersearchbar">
-                        <input type="search" class="searchbar" placeholder="Search byte" />
+                        <input type="search" class="searchbar" placeholder="Search byte"/>
                     </div>
                     <div class="headerprofile">
                         <div class="profile">
@@ -44,13 +45,17 @@
                     </div>
                 </div>
                 <div class="createposttext">
-                    <input type="search" class="posttext" placeholder="Create Post" />
+                    <input type="search" class="posttext" placeholder="Create Post" onclick="redirectToAnotherPage()"/>
                 </div>
                 <div class="createpostpic">
+                    <a href="./CreatePost.html">
                     <img src="./images main/image-alt-regular-24.png"/>
+                    </a>
                 </div>
                 <div class="createpostattach">
+                    <a href="./CreatePost.html">
                     <img src="./images main/folder-plus-regular-24.png"/>
+                    </a>
                 </div>
             </div>
             <div class="navigation">
@@ -60,39 +65,46 @@
                           <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                          <a href="#">Link 1</a>
+                          <a href="./main_community.html">r/apple</a>
                           <a href="#">Link 2</a>
                           <a href="#">Link 3</a>
                         </div>
                     </div>
                 </div>
                 <div class="newposts">
+                    <a href="./main.html">
                     <img src="./images main/badge-regular-24.png">
+                    </a>
                 </div>
                 <div class="hotposts">
+                    <a href="./main.html">
                     <img src="./images main/hot-solid-24.png">
+                    </a>
                 </div>
             </div>
             <div class="postscontainer">
                 <div class="postheader">
                     <div class="communityposticonholder">
                         <div class="communityposticon">
-                            
+                            <img src="./images main/apple_logo.jpg"/>
                         </div>
                     </div>
                     <div class="userpostname">
-                        <span class="postedon">b/apple</span>
+                        <span class="postedon"><a href="./main_community.html">b/apple</a></span>
                         <span>·</span>
                         <span>Posted by</span>
-                        <span class="postedby">u/walaeh</span>
-                        <span class="postdate">x hours ago</span>
+                        <span class="postedby"><a href="./profilepage2.html">u/gojo1234</a></span>
+                        <span class="postdate">8 days ago</span>
                     </div>
                 </div>
+                <div class="posttitleheader">
+                    <span><h3><a href="./samplepost2.html">Apple just dropped the new iPhone 16!!!</a></h3></span>
+                </div>
                 <div class="posttextcontent">
-                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in metus et mauris cursus finibus in nec felis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum fringilla rhoncus auctor. Integer eros arcu, placerat sed sapien sed, consequat dictum nisl. Quisque dictum, justo a vestibulum condimentum, lectus neque consectetur orci, nec dapibus lacus risus ac massa. Donec sit amet justo vitae nisl suscipit aliquet. Cras vulputate convallis lacus eu tincidunt. Etiam eu dapibus elit. Phasellus sed sem sed felis laoreet tristique at eu massa. Cras a fringilla magna, in fermentum ex. Donec at mauris leo. In orci felis, fringilla et sollicitudin sit amet, mattis ut mi.</span>
+                    <span>it good :D</span>
                 </div>
                 <div class="postpicturecontent">
-
+                    <img src="./images main/gojowithiphone1.png"/>
                 </div>
                 <div class="postfooter">
                     <div class="upbit">
@@ -108,7 +120,50 @@
                         <img src="./images main/share-regular-24.png"/>
                     </div>
                     <div class="commentcounter">
-                        <span>x comments</span>
+                        <span><a href="./samplepost2.html">0 replies</a></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="postscontainer">
+                <div class="postheader">
+                    <div class="communityposticonholder">
+                        <div class="communityposticon">
+                            <img src="./images main/apple_logo.jpg"/>
+                        </div>
+                    </div>
+                    <div class="userpostname">
+                        <span class="postedon"><a href="./main_community.html">b/apple</a></span>
+                        <span>·</span>
+                        <span>Posted by</span>
+                        <span class="postedby"><a href="./profilepage3.html">u/sukunaryomen</a></span>
+                        <span class="postdate">7 years ago</span>
+                    </div>
+                </div>
+                <div class="posttitleheader">
+                    <span><h3><a href="./samplepost3.html">Sell me on the iphone</a></h3></span>
+                </div>
+                <div class="posttextcontent">
+                    <span>I have an android right now and i love the thing to death. I have encountered zero problems with it. I had an iphone once and hated it. But it was the 4 or 4s. All of my friends have iphones and they live in a different state so I know getting an iphone would make it easier for us to communicate. The only problem I have with the iphones are that every time I get new music I have to resynce my whole phone just to add a couple songs or albums. With photos I had to use the photos app and again sync my phone in order to get them off the phone. With Android all I have to do is click and drag both my photos and music and in less than 30 seconds I am done. So r/apple sell on why I should get an ihpone</span>
+                </div>
+                <div class="postpicturecontent">
+                    
+                </div>
+                <div class="postfooter">
+                    <div class="upbit">
+                        <img src="./images main/up-arrow-regular-24.png"/>
+                    </div>
+                    <div class="downbit">
+                        <img src="./images main/down-arrow-regular-24.png"/>
+                    </div>
+                    <div class="comment">
+                        <img src="./images main/comment-regular-24.png"/>
+                    </div>
+                    <div class="share">
+                        <img src="./images main/share-regular-24.png"/>
+                    </div>
+                    <div class="commentcounter">
+                        <span><a href="./samplepost3.html">1 reply</a></span>
                     </div>
                 </div>
             </div>
