--- a/samplepost3.html
+++ b/samplepost3.html
@@ -47,7 +47,7 @@
 <div class="postcontainer">
     <div class="userinfo">
         <div class="postcommunity"> 
-            <h5> b/Community </h5>
+            <h5> b/apple </h5>
         </div>
         <div class ="userpfp">
             <a href="profilepage.html"> <img class="userimg" src="./images main/sukunayes.png"> </a>
