--- a/CreatePost.html
+++ b/CreatePost.html
@@ -7,7 +7,7 @@
     <div class = "headercontainer">
         <div class = "webheader">
             <div class = "headercontent">
-                <a href ="https://google.com"><img class = "logo" src = "logo.png"></a>
+                <a href ="https://google.com"><img class = "logo" src = "./images main/byte_logo.png"></a>
                 <span class = "link"> <a style = "color: beige; text-decoration: none" href = "google.com"> byte. </a> </span>
             </div>
         
