main pages done

--- a/main_community.html
+++ b/main_community.html
@@ -21,7 +21,9 @@
                         <div class="profile">
                             <div class="profileicon">
                                 <div class="profileiconholder">
+                                    <a href="./profilepage2.html">
                                     <img src="./images main/pfp.jpg"/>
+                                    </a>
                                 </div>
                             </div>
                             <div class="profilecontainer">
@@ -35,7 +37,7 @@
                         </div>
 
                         <div class="topbuttons">
-                            <a href=""> Log out </a>
+                            <a href="./main_not_logged.html"> Log out </a>
                         </div>
                     </div>
                 </div>
