--- a/main_not_logged.html
+++ b/main_not_logged.html
@@ -19,25 +19,9 @@
                         <input type="search" class="searchbar" placeholder="Search byte"/>
                     </div>
                     <div class="headerprofile">
-                        <div class="profile">
-                            <div class="profileicon">
-                                <div class="profileiconholder">
-                                    <a href="./profilepage2.html">
-                                    <img src="./images main/pfp.jpg"/>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="profilecontainer">
-                                <div class="profiledisplayname">
-                                    <span>gojowithiphone</span>
-                                </div>
-                                <div class="profilehandlename">
-                                    <span>u/gojo1234</span>
-                                </div>
-                            </div>
-                        </div>
+
                         <div class="topbuttons">
-                            <a href="./main_not_logged.html"> Log out </a>
+                            <a href="./Sign_up.html"> Signup </a>
                         </div>
                     </div>
                 </div>
@@ -46,7 +30,6 @@
             <div class="createpost">
                 <div class="createposticon">
                     <div class="createpostusericonholder">
-                        <img src="./images main/pfp.jpg"/>
                     </div>
                 </div>
                 <div class="createposttext">
