--- a/profilepage2.html
+++ b/profilepage2.html
@@ -22,15 +22,15 @@
                         <div class="profileicon">
                             <div class="profileiconholder">
                                 <!-- ./images main/pfp.jpg -->
-                                <a href="profilepage.html"> <img src="./images main/gojowithiphonepfp.jpg"/> </a>
+                                <a href="profilepage2.html"> <img src="./images main/pfp.jpg"/> </a>
                             </div>
                         </div>
                         <div class="headprofilecontainer">
                             <div class="profiledisplayname">
-                                <a href="profilepage1.html"> <span>gojowithiphone</span> </a>
+                                <a href="profilepage2.html"> <span>gojowithiphone</span> </a>
                             </div>
                             <div class="profilehandlename">
-                                <a href="profilepage1.html"> 
+                                <a href="profilepage2.html"> 
                                 <span>u/gojo1234</span>
                                 </a>
                             </div>
@@ -46,7 +46,7 @@
         <div class="profilecontainer">
             <div class="userinfo">
                 <div class="userpfp">
-                    <img class="userimg" src="./images main/gojowithiphonepfp.jpg" />
+                    <img class="userimg" src="./images main/pfp.jpg" />
                 </div>
                 <div class="editbutton"> <a href=""> Edit </a></a></div>
             </div>
