--- a/samplepost1.html
+++ b/samplepost1.html
@@ -23,15 +23,15 @@
                         <div class="profileicon">
                             <div class="profileiconholder">
                                 <!-- ./images main/pfp.jpg -->
-                                <a href="profilepage.html"> <img src="./images main/pfp.jpg"/> </a>
+                                <a href="profilepage2.html"> <img src="./images main/pfp.jpg"/> </a>
                             </div>
                         </div>
                         <div class="profilecontainer">
                             <div class="profiledisplayname">
-                                <a href="profilepage.html"> <span>gojowithiphone</span> </a>
+                                <a href="profilepage2.html"> <span>gojowithiphone</span> </a>
                             </div>
                             <div class="profilehandlename">
-                                <a href="profilepage.html"> 
+                                <a href="profilepage2.html"> 
                                 <span>u/gojo1234</span>
                                 </a>
                             </div>
@@ -50,11 +50,11 @@
             <h5> b/WebDevelopment </h5>
         </div>
         <div class ="userpfp">
-            <a href="profilepage_sample1.html"> <img class="userimg" src="./images main/AYAKA.jpg"> </a>
+            <a href="profilepage1.html"> <img class="userimg" src="./images main/AYAKA.jpg"> </a>
             
         </div>
         <div class="postuserinfo"> 
-            <p> Wala_3h <br> Bits: 1</p>
+            <p> Wala_3h <br><span>u/WalaEh</span><br> Bits: 1</p>
         </div>
         <div class="postdate"> 
             <h5> Posted on: February 8, 2024</h5>
@@ -62,8 +62,8 @@
         </div>
     </div>
     <div class="postinfocontainer">
-        <h4> MDN is very nice </h4>
-        <p> ^ </p>
+        <h4> MDN is very convenient </h4>
+        <p> It really helped us in creating this website! It gave a fast and easy way to access information to different elements. ^_^ </p>
         <div class="replybutton"> <a href=""> Reply </a> </div>
     </div>
 </div>
@@ -72,9 +72,9 @@
     <div class="replybox">
         <div class = "replyinfo"> 
             <div class="replypfp"> 
-                <a href="profilepage_sample2.html"> <img class="userimg" src="./images main/pfp.jpg"> </a>
+                <a href="profilepage2.html"> <img class="userimg" src="./images main/pfp.jpg"> </a>
             </div>
-            <p> gojowithiphone <br> Bits: Infinite</p>
+            <p> gojowithiphone <br><span> u/gojo1234 </span><br> Bits: Infinite</p>
             <div class="postdate"> 
                 <h5> Posted on: February 9, 2024 </h5>
                 <p> 7 days ago </p>
