--- a/samplepost2.html
+++ b/samplepost2.html
@@ -50,7 +50,7 @@
             <h5> b/Apple </h5>
         </div>
         <div class ="userpfp">
-            <a href="profilepage_sample2.html"> <img class="userimg" src="./images main/pfp.jpg"> </a>
+            <a href="profilepage2.html"> <img class="userimg" src="./images main/pfp.jpg"> </a>
             
         </div>
         <div class="postuserinfo"> 
