--- a/samplepost3.html
+++ b/samplepost3.html
@@ -23,15 +23,15 @@
                     <div class="profileicon">
                         <div class="profileiconholder">
                             <!-- ./images main/pfp.jpg -->
-                            <a href="profilepage.html"> <img src="./images main/pfp.jpg"/> </a>
+                            <a href="profilepage2.html"> <img src="./images main/gojowithiphonepfp.jpg"/> </a>
                         </div>
                     </div>
                     <div class="profilecontainer">
                         <div class="profiledisplayname">
-                            <a href="profilepage.html"> <span>gojowithiphone</span> </a>
+                            <a href="profilepage2.html"> <span>gojowithiphone</span> </a>
                         </div>
                         <div class="profilehandlename">
-                            <a href="profilepage.html"> 
+                            <a href="profilepage2.html"> 
                             <span>u/gojo1234</span>
                             </a>
                         </div>
@@ -47,10 +47,10 @@
 <div class="postcontainer">
     <div class="userinfo">
         <div class="postcommunity"> 
-            <h5> b/apple </h5>
+            <h5> b/Apple </h5>
         </div>
         <div class ="userpfp">
-            <a href="profilepage.html"> <img class="userimg" src="./images main/sukunayes.png"> </a>
+            <a href="profilepage3.html"> <img class="userimg" src="./images main/sukunayes.png"> </a>
             
         </div>
         <div class="postuserinfo"> 
@@ -72,7 +72,7 @@
     <div class="replybox">
         <div class = "replyinfo"> 
             <div class="replypfp"> 
-                <a href="profilepage_sample2.html"> <img class="userimg" src="./images main/pfp.jpg"> </a>
+                <a href="profilepage2.html"> <img class="userimg" src="./images main/pfp.jpg"> </a>
             </div>
             <p> gojowithiphone <br> <span class="userhandle"> u/gojo1234</span><br>Bits: Infinite </p>
             <div class="postdate"> 
