--- a/samplepost4.html
+++ b/samplepost4.html
@@ -23,15 +23,15 @@
                     <div class="profileicon">
                         <div class="profileiconholder">
                             <!-- ./images main/pfp.jpg -->
-                            <a href="profilepage.html"> <img src="./images main/pfp.jpg"/> </a>
+                            <a href="profilepage2.html"> <img src="./images main/pfp.jpg"/> </a>
                         </div>
                     </div>
                     <div class="profilecontainer">
                         <div class="profiledisplayname">
-                            <a href="profilepage.html"> <span>gojowithiphone</span> </a>
+                            <a href="profilepage2.html"> <span>gojowithiphone</span> </a>
                         </div>
                         <div class="profilehandlename">
-                            <a href="profilepage.html"> 
+                            <a href="profilepage2.html"> 
                             <span>u/gojo1234</span>
                             </a>
                         </div>
@@ -50,7 +50,7 @@
             <h5> b/PCBuilding </h5>
         </div>
         <div class ="userpfp">
-            <a href="profilepage.html"> <img class="userimg" src="./images main/goatkotsu.png"> </a>
+            <a href="profilepage4.html"> <img class="userimg" src="./images main/goatkotsu.png"> </a>
             
         </div>
         <div class="postuserinfo"> 
@@ -58,7 +58,7 @@
         </div>
         <div class="postdate"> 
             <h5> Posted on: March 7, 2023</h5>
-            <p> 1 year ago </p>
+            <p> 11 Months ago </p>
         </div>
     </div>
     <div class="postinfocontainer">
@@ -85,12 +85,12 @@ Should I just pair these with a standard windows computer or something else made
     <div class="replybox">
         <div class = "replyinfo"> 
             <div class="replypfp"> 
-                <a href="profilepage_sample2.html"> <img class="userimg" src="./images main/lumpiangtoge.jpg"> </a>
+                <a href="profilepage5.html"> <img class="userimg" src="./images main/lumpiangtoge.jpg"> </a>
             </div>
             <p> LumpiangToge <br><span class="userhandle"> u/tunamayo</span><br> Bits: tuna </p>
             <div class="postdate">
-            <h5> Posted on: January 20, 2017 </h5>
-            <p> 7 years ago </p>
+            <h5> Posted on: March 8, 2023 </h5>
+            <p> 11 Months ago </p>
             </div>
         </div>
         
