--- a/samplepost5.html
+++ b/samplepost5.html
@@ -23,15 +23,15 @@
                     <div class="profileicon">
                         <div class="profileiconholder">
                             <!-- ./images main/pfp.jpg -->
-                            <a href="profilepage.html"> <img src="./images main/pfp.jpg"/> </a>
+                            <a href="profilepage2.html"> <img src="./images main/pfp.jpg"/> </a>
                         </div>
                     </div>
                     <div class="profilecontainer">
                         <div class="profiledisplayname">
-                            <a href="profilepage.html"> <span>gojowithiphone</span> </a>
+                            <a href="profilepage2.html"> <span>gojowithiphone</span> </a>
                         </div>
                         <div class="profilehandlename">
-                            <a href="profilepage.html"> 
+                            <a href="profilepage2.html"> 
                             <span>u/gojo1234</span>
                             </a>
                         </div>
@@ -50,15 +50,15 @@
             <h5> b/PCMasterRace </h5>
         </div>
         <div class ="userpfp">
-            <a href="profilepage.html"> <img class="userimg" src="./images main/joshhutcherson.PNG"> </a>
+            <a href="profilepage6.html"> <img class="userimg" src="./images main/joshhutcherson.PNG"> </a>
             
         </div>
         <div class="postuserinfo"> 
             <p> JoshHutcherson <br> <span class="userhandle"> u/weewoowooweewoo</span><br>Bits: 46290 </p>
         </div>
         <div class="postdate"> 
-            <h5> Posted on: March 7, 2023</h5>
-            <p> 1 year ago </p>
+            <h5> Posted on: January 7, 2024</h5>
+            <p> 1 Month ago </p>
         </div>
     </div>
     <div class="postinfocontainer">
@@ -75,12 +75,12 @@
     <div class="replybox">
         <div class = "replyinfo"> 
             <div class="replypfp"> 
-                <a href="profilepage_sample2.html"> <img class="userimg" src="./images main/rickastley.PNG"> </a>
+                <a href="profilepage7.html"> <img class="userimg" src="./images main/rickastley.PNG"> </a>
             </div>
             <p> RickAstley <br><span class="userhandle"> u/nvrgonnagive</span><br> Bits: 4M </p>
             <div class="postdate">
-            <h5> Posted on: January 20, 2017 </h5>
-            <p> 7 years ago </p>
+            <h5> Posted on: January 7, 2024 </h5>
+            <p> 1 Month ago </p>
             </div>
         </div>
         
