--- a/viewpost.html
+++ b/viewpost.html
@@ -10,7 +10,7 @@
         <div class="headercontent">
             <div class="headerhome">
                 <div class="logo">
-                    <img src="logo.png"/>
+                    <img src="./images main/logo.png"/>
                     <span class = "link"> <a style = "color: beige; text-decoration: none" href = "google.com"> byte. </a> </span>
                 </div>
             </div>
@@ -22,7 +22,7 @@
                     <div class="profileicon">
                         <div class="profileiconholder">
                             <!-- ./images main/pfp.jpg -->
-                            <a href="profilepage.html"> <img src="./images main/pfp.jpg"/> </a>
+                            <a href="profilepage.html"> <img src="./images main/gojowithiphonepfp.jpg"/> </a>
                         </div>
                     </div>
                     <div class="profilecontainer">
