--- a/profilepage1.html
+++ b/profilepage1.html
@@ -22,15 +22,15 @@
                         <div class="profileicon">
                             <div class="profileiconholder">
                                 <!-- ./images main/pfp.jpg -->
-                                <a href="profilepage.html"> <img src="./images main/gojowithiphonepfp.jpg"/> </a>
+                                <a href="profilepage2.html"> <img src="./images main/pfp.jpg"/> </a>
                             </div>
                         </div>
                         <div class="headprofilecontainer">
                             <div class="profiledisplayname">
-                                <a href="profilepage1.html"> <span>gojowithiphone</span> </a>
+                                <a href="profilepage2.html"> <span>gojowithiphone</span> </a>
                             </div>
                             <div class="profilehandlename">
-                                <a href="profilepage1.html"> 
+                                <a href="profilepage2.html"> 
                                 <span>u/gojo1234</span>
                                 </a>
                             </div>
@@ -52,7 +52,7 @@
             </div>
 
             <div class="profileinfo"> 
-                <h3> Wala_Eh </h3> <span> u/WalaEh </span><span class="usertitle" style="color: green"> byte Admin</span>
+                <h3> Wala_3h </h3> <span> u/WalaEh </span><span class="usertitle" style="color: green"> byte Admin</span>
                 <h5> Bits: 1 </h5>
                 <h4> About me: </h4>
                 <p> 
@@ -72,11 +72,11 @@
                     <div class="latestpostpfp"> 
                         <a href="profilepage1.html"> <img class="userimg" src="./images main/AYAKA.jpg"/> </a>
                     </div>
-                    <p> Wala_Eh <br> <span style="padding: 5px;">u/WalaEh</span><br> Bits: 1</p>
+                    <p> Wala_3h <br> <span style="padding: 5px;">u/WalaEh</span><br> Bits: 1</p>
                 </div>
                 <div class="latestpostsdetails"> 
                     <h4> <a href="samplepost1.html"> MDN is very convenient </a> </h4> 
-                    <p> ^ </p>
+                    <p> It really helped us in creating this website! It gave a fast and easy way to access information to different elements. ^_^ </p>
                 </div>
             </div>
         </div>
