made final changes

--- a/Sign_up.html
+++ b/Sign_up.html
@@ -4,10 +4,16 @@
 </head>
 <body>
 
-    <div class = "webheader">
-        <div class = "headercontent">
-            <a href ="https://google.com"><img class = "logo" src = "logo.png"></a>
-            <span class = "link"> <a style = "color: beige; text-decoration: none" href = "google.com"> byte. </a> </span>
+    <div class="homecontainer">
+        <div class = "webheader">
+            <div class = "headercontent">
+                <div class="headerhome">
+                    <div class="websitelogo">
+                        <a href="./main.html"><img src="./images main/byte_logo.png"/></a>
+                        <span class = "link"> <a style = "color: beige; text-decoration: none" href = "./main.html"> byte. </a> </span>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -18,10 +24,10 @@
         <div class = "header">
             <span class ="blocktitle"> User Registration </span>
         </div>
-    <form action = "https://google.com">
+    <form action = "./main.html">
         <div class = "Username">
             <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required/>
+            <input type="email" id="username" name="username" required/>
         </div>
 
         <div class = "Password">
