--- a/main_not_logged.html
+++ b/main_not_logged.html
@@ -36,12 +36,12 @@
                     <input type="search" class="posttext" placeholder="Create Post" onclick="redirectToAnotherPage()"/>
                 </div>
                 <div class="createpostpic">
-                    <a href="./CreatePost.html">
+                    <a href="./Sign_up.html">
                     <img src="./images main/image-alt-regular-24.png"/>
                     </a>
                 </div>
                 <div class="createpostattach">
-                    <a href="./CreatePost.html">
+                    <a href="./Sign_up.html">
                     <img src="./images main/folder-plus-regular-24.png"/>
                     </a>
                 </div>
@@ -60,12 +60,12 @@
                     </div>
                 </div>
                 <div class="newposts">
-                    <a href="./main.html">
+                    <a href="./Sign_up.html">
                     <img src="./images main/badge-regular-24.png">
                     </a>
                 </div>
                 <div class="hotposts">
-                    <a href="./main.html">
+                    <a href="./Sign_up.html">
                     <img src="./images main/hot-solid-24.png">
                     </a>
                 </div>
