--- a/profilepage3.html
+++ b/profilepage3.html
@@ -6,79 +6,78 @@
 </head>
 <body>
     <div class="homecontainer">
-        <div class="webheader">
-            <div class="headercontent">
+        <div class = "webheader">
+            <div class = "headercontent">
                 <div class="headerhome">
-                    <div class="logo">
-                        <img src="./images main/logo.png"/>
-                        <span class = "link"> <a style = "color: beige; text-decoration: none" href = "google.com"> byte. </a> </span>
+                    <div class="websitelogo">
+                        <a href="./main.html"><img src="./images main/byte_logo.png"/></a>
+                        <span class = "link"> <a style = "color: beige; text-decoration: none" href = "./main.html"> byte. </a> </span>
                     </div>
                 </div>
                 <div class="headersearchbar">
-                    <input type="search" class="searchbar" placeholder="Search byte" />
+                    <input type="search" class="searchbar" placeholder="Search byte"/>
                 </div>
                 <div class="headerprofile">
                     <div class="profile">
                         <div class="profileicon">
                             <div class="profileiconholder">
-                                <!-- ./images main/pfp.jpg -->
-                                <a href="profilepage2.html"> <img src="./images main/pfp.jpg"/> </a>
-                            </div>
-                        </div>
-                        <div class="headprofilecontainer">
-                            <div class="profiledisplayname">
-                                <a href="profilepage2.html"> <span>gojowithiphone</span> </a>
-                            </div>
-                            <div class="profilehandlename">
-                                <a href="profilepage2.html"> 
-                                <span>u/gojo1234</span>
+                                <a href="./profilepage2.html">
+                                <img src="./images main/pfp.jpg"/>
                                 </a>
                             </div>
                         </div>
+                        <div class="profilecontainer">
+                            <div class="profiledisplayname">
+                                <span>gojowithiphone</span>
+                            </div>
+                            <div class="profilehandlename">
+                                <span>u/gojo1234</span>
+                            </div>
+                        </div>
                     </div>
-                    <div class="topbuttons"> 
-                        <a href=""> Log out </a>
+                    <div class="topbuttons">
+                        <a href="./main_not_logged.html"> Log out </a>
                     </div>
-        </div>
-        </div>
-    </div>
-    <div class="mainpage"> 
-        <div class="profilecontainer">
-            <div class="userinfo">
-                <div class="userpfp">
-                    <img class="userimg" src="./images main/sukunayes.png" />
-                </div>
-                <div class="editbutton"> <a href=""> Edit </a></a></div>
-            </div>
-
-            <div class="profileinfo"> 
-                <h3> SukunaWithNokia </h3> <span> u/sukunaryomen </span>
-                <h5> Bits: 0 </h5>
-                <h4> About me: </h4>
-                <p> 
-                    "Nah, I'd Lose."
-                </p>
-                <div class="editbutton"> 
-                    <a href=""> Edit description </a> 
-                </div>
-            </div> 
-        </div>
-        <div class="latestpostscontainer">  
-            <h2> Latest Posts: </h2> 
-            <div class="latestpost"> 
-                <div class="latestpostinfo">
-                    <div class="latestpostpfp"> 
-                        <a href="profilepage3.html"> <img class="userimg" src="./images main/sukunayes.png"/> </a>
-                    </div>
-                    <p> SukunaWithNokia <br> <span style="padding: 5px;">u/sukunaryomen</span><br> Bits: 0</p>
-                </div>
-                <div class="latestpostsdetails"> 
-                    <h4> <a href="samplepost3.html"> Sell me on the iphone </a> </h4> 
-                    <p> I have an android right now and i love the thing to death. I have encountered zero problems with it. I had an iphone once and hated it. But it was the 4 or 4s. All of my friends have iphones and they live in a different state so I know getting an iphone would make it easier for us to communicate. The only problem I have with the iphones are that every time I get new music I have to resynce my whole phone just to add a couple songs or albums. With photos I had to use the photos app and again sync my phone in order to get them off the phone. With Android all I have to do is click and drag both my photos and music and in less than 30 seconds I am done. So r/apple sell on why I should get an ihpone </p>
                 </div>
             </div>
         </div>
-    </div>
+        <div class="mainpage"> 
+            <div class="profilecontainer1">
+                <div class="userinfo">
+                    <div class="userpfp">
+                        <img class="userimg" src="./images main/sukunayes.png" />
+                    </div>
+                    <div class="editbutton"> <a href=""> Edit </a></a></div>
+                </div>
 
+                <div class="profileinfo"> 
+                    <h3> SukunaWithNokia </h3> <span> u/sukunaryomen </span>
+                    <h5> Bits: 0 </h5>
+                    <h4> About me: </h4>
+                    <p> 
+                        "Nah, I'd Lose."
+                    </p>
+                    <div class="editbutton"> 
+                        <a href=""> Edit description </a> 
+                    </div>
+                </div> 
+            </div>
+            <div class="latestpostscontainer">  
+                <h2> Latest Posts: </h2> 
+                <div class="latestpost"> 
+                    <div class="latestpostinfo">
+                        <div class="latestpostpfp"> 
+                            <a href="profilepage3.html"> <img class="userimg" src="./images main/sukunayes.png"/> </a>
+                        </div>
+                        <p> SukunaWithNokia <br> <span style="padding: 5px;">u/sukunaryomen</span><br> Bits: 0</p>
+                    </div>
+                    <div class="latestpostsdetails"> 
+                        <h4> <a href="samplepost3.html"> Sell me on the iphone </a> </h4> 
+                        <p> I have an android right now and i love the thing to death. I have encountered zero problems with it. I had an iphone once and hated it. But it was the 4 or 4s. All of my friends have iphones and they live in a different state so I know getting an iphone would make it easier for us to communicate. The only problem I have with the iphones are that every time I get new music I have to resynce my whole phone just to add a couple songs or albums. With photos I had to use the photos app and again sync my phone in order to get them off the phone. With Android all I have to do is click and drag both my photos and music and in less than 30 seconds I am done. So r/apple sell on why I should get an ihpone </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
