--- a/profilepage5.html
+++ b/profilepage5.html
@@ -6,80 +6,63 @@
 </head>
 <body>
     <div class="homecontainer">
-        <div class="webheader">
-            <div class="headercontent">
+        <div class = "webheader">
+            <div class = "headercontent">
                 <div class="headerhome">
-                    <div class="logo">
-                        <img src="./images main/logo.png"/>
-                        <span class = "link"> <a style = "color: beige; text-decoration: none" href = "google.com"> byte. </a> </span>
+                    <div class="websitelogo">
+                        <a href="./main.html"><img src="./images main/byte_logo.png"/></a>
+                        <span class = "link"> <a style = "color: beige; text-decoration: none" href = "./main.html"> byte. </a> </span>
                     </div>
                 </div>
                 <div class="headersearchbar">
-                    <input type="search" class="searchbar" placeholder="Search byte" />
+                    <input type="search" class="searchbar" placeholder="Search byte"/>
                 </div>
                 <div class="headerprofile">
                     <div class="profile">
                         <div class="profileicon">
                             <div class="profileiconholder">
-                                <!-- ./images main/pfp.jpg -->
-                                <a href="profilepage2.html"> <img src="./images main/pfp.jpg"/> </a>
-                            </div>
-                        </div>
-                        <div class="headprofilecontainer">
-                            <div class="profiledisplayname">
-                                <a href="profilepage2.html"> <span>gojowithiphone</span> </a>
-                            </div>
-                            <div class="profilehandlename">
-                                <a href="profilepage2.html"> 
-                                <span>u/gojo1234</span>
+                                <a href="./profilepage2.html">
+                                <img src="./images main/pfp.jpg"/>
                                 </a>
                             </div>
                         </div>
+                        <div class="profilecontainer">
+                            <div class="profiledisplayname">
+                                <span>gojowithiphone</span>
+                            </div>
+                            <div class="profilehandlename">
+                                <span>u/gojo1234</span>
+                            </div>
+                        </div>
                     </div>
-                    <div class="topbuttons"> 
-                        <a href=""> Log out </a>
+                    <div class="topbuttons">
+                        <a href="./main_not_logged.html"> Log out </a>
                     </div>
-        </div>
-        </div>
-    </div>
-    <div class="mainpage"> 
-        <div class="profilecontainer">
-            <div class="userinfo">
-                <div class="userpfp">
-                    <img class="userimg" src="./images main/lumpiangtoge.jpg" />
-                </div>
-                <div class="editbutton"> <a href=""> Edit </a></a></div>
-            </div>
-
-            <div class="profileinfo"> 
-                <h3> LumpiangToge </h3> <span> u/tunamayo </span>
-                <h5> Bits: tuna </h5>
-                <h4> About me: </h4>
-                <p> 
-                    "Bonito flakes salmon cod roe"
-                </p>
-                <div class="editbutton"> 
-                    <a href=""> Edit description </a> 
-                </div>
-            </div> 
-        </div>
-        <!-- No post
-        <div class="latestpostscontainer">  
-            <h2> Latest Posts: </h2> 
-            <div class="latestpost"> 
-                <div class="latestpostinfo">
-                    <div class="latestpostpfp"> 
-                        <a href="profilepage4.html"> <img class="userimg" src="./images main/lumpiangtoge.jpg"/> </a>
-                    </div>
-                    <p> LumpiangToge <br> <span style="padding: 5px;">u/tunamayo</span><br> Bits: 100</p>
-                </div>
-                <div class="latestpostsdetails"> 
-                    <h4> <a href="samplepost4.html"> What are the ideal specs for a PC in 2023? </a> </h4> 
-                    <p> I'm thinking of building my own PC within the next couple months once I save up enough money and I need some second opinions on if the PC hardware I'm looking at would run games like Minecraft, Overwatch 2, COD, etc. smoothly/around 1080p. I'll most likely be using it for uni assignments and general browsing on the side, too. I've been looking at these specs for my build: </p>
                 </div>
             </div>
-        </div>-->
-    </div>
+        </div>
+        <div class="mainpage"> 
+            <div class="profilecontainer1">
+                <div class="userinfo">
+                    <div class="userpfp">
+                        <img class="userimg" src="./images main/lumpiangtoge.jpg" />
+                    </div>
+                    <div class="editbutton"> <a href=""> Edit </a></a></div>
+                </div>
 
+                <div class="profileinfo"> 
+                    <h3> LumpiangToge </h3> <span> u/tunamayo </span>
+                    <h5> Bits: tuna </h5>
+                    <h4> About me: </h4>
+                    <p> 
+                        "Bonito flakes salmon cod roe"
+                    </p>
+                    <div class="editbutton"> 
+                        <a href=""> Edit description </a> 
+                    </div>
+                </div> 
+            </div>
+        </div>
+    </div>
 </body>
 </html>
