--- a/profilepage6.html
+++ b/profilepage6.html
@@ -6,79 +6,78 @@
 </head>
 <body>
     <div class="homecontainer">
-        <div class="webheader">
-            <div class="headercontent">
+        <div class = "webheader">
+            <div class = "headercontent">
                 <div class="headerhome">
-                    <div class="logo">
-                        <img src="./images main/logo.png"/>
-                        <span class = "link"> <a style = "color: beige; text-decoration: none" href = "google.com"> byte. </a> </span>
+                    <div class="websitelogo">
+                        <a href="./main.html"><img src="./images main/byte_logo.png"/></a>
+                        <span class = "link"> <a style = "color: beige; text-decoration: none" href = "./main.html"> byte. </a> </span>
                     </div>
                 </div>
                 <div class="headersearchbar">
-                    <input type="search" class="searchbar" placeholder="Search byte" />
+                    <input type="search" class="searchbar" placeholder="Search byte"/>
                 </div>
                 <div class="headerprofile">
                     <div class="profile">
                         <div class="profileicon">
                             <div class="profileiconholder">
-                                <!-- ./images main/pfp.jpg -->
-                                <a href="profilepage2.html"> <img src="./images main/pfp.jpg"/> </a>
-                            </div>
-                        </div>
-                        <div class="headprofilecontainer">
-                            <div class="profiledisplayname">
-                                <a href="profilepage2.html"> <span>gojowithiphone</span> </a>
-                            </div>
-                            <div class="profilehandlename">
-                                <a href="profilepage2.html"> 
-                                <span>u/gojo1234</span>
+                                <a href="./profilepage2.html">
+                                <img src="./images main/pfp.jpg"/>
                                 </a>
                             </div>
                         </div>
+                        <div class="profilecontainer">
+                            <div class="profiledisplayname">
+                                <span>gojowithiphone</span>
+                            </div>
+                            <div class="profilehandlename">
+                                <span>u/gojo1234</span>
+                            </div>
+                        </div>
                     </div>
-                    <div class="topbuttons"> 
-                        <a href=""> Log out </a>
+                    <div class="topbuttons">
+                        <a href="./main_not_logged.html"> Log out </a>
                     </div>
-        </div>
-        </div>
-    </div>
-    <div class="mainpage"> 
-        <div class="profilecontainer">
-            <div class="userinfo">
-                <div class="userpfp">
-                    <img class="userimg" src="./images main/joshhutcherson.PNG" />
-                </div>
-                <div class="editbutton"> <a href=""> Edit </a></a></div>
-            </div>
-
-            <div class="profileinfo"> 
-                <h3> JoshHutcherson </h3> <span> u/weewoowooweewoo </span>
-                <h5> Bits: 46290 </h5>
-                <h4> About me: </h4>
-                <p> 
-                    Stream whistle
-                </p>
-                <div class="editbutton"> 
-                    <a href=""> Edit description </a> 
-                </div>
-            </div> 
-        </div>
-        <div class="latestpostscontainer">  
-            <h2> Latest Posts: </h2> 
-            <div class="latestpost"> 
-                <div class="latestpostinfo">
-                    <div class="latestpostpfp"> 
-                        <a href="profilepage6.html"> <img class="userimg" src="./images main/joshhutcherson.PNG"/> </a>
-                    </div>
-                    <p> JoshHutcherson <br> <span style="padding: 5px;">u/weewoowooweewoo</span><br> Bits: 46290 </p>
-                </div>
-                <div class="latestpostsdetails"> 
-                    <h4> <a href="samplepost5.html">Need help fixing something </a> </h4> 
-                    <p> I think I broke a part of my pc, video proof is in this link. </p>
                 </div>
             </div>
         </div>
-    </div>
+        <div class="mainpage"> 
+            <div class="profilecontainer1">
+                <div class="userinfo">
+                    <div class="userpfp">
+                        <img class="userimg" src="./images main/joshhutcherson.PNG" />
+                    </div>
+                    <div class="editbutton"> <a href=""> Edit </a></a></div>
+                </div>
 
+                <div class="profileinfo"> 
+                    <h3> JoshHutcherson </h3> <span> u/weewoowooweewoo </span>
+                    <h5> Bits: 46290 </h5>
+                    <h4> About me: </h4>
+                    <p> 
+                        Stream whistle
+                    </p>
+                    <div class="editbutton"> 
+                        <a href=""> Edit description </a> 
+                    </div>
+                </div> 
+            </div>
+            <div class="latestpostscontainer">  
+                <h2> Latest Posts: </h2> 
+                <div class="latestpost"> 
+                    <div class="latestpostinfo">
+                        <div class="latestpostpfp"> 
+                            <a href="profilepage6.html"> <img class="userimg" src="./images main/joshhutcherson.PNG"/> </a>
+                        </div>
+                        <p> JoshHutcherson <br> <span style="padding: 5px;">u/weewoowooweewoo</span><br> Bits: 46290 </p>
+                    </div>
+                    <div class="latestpostsdetails"> 
+                        <h4> <a href="samplepost5.html">Need help fixing something </a> </h4> 
+                        <p> I think I broke a part of my pc, video proof is in this link. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
