--- a/samplepost2.html
+++ b/samplepost2.html
@@ -7,69 +7,68 @@
 
 <body>
     <div class="homecontainer">
-        <div class="webheader">
-            <div class="headercontent">
+        <div class = "webheader">
+            <div class = "headercontent">
                 <div class="headerhome">
-                    <div class="logo">
-                        <img src="./images main/logo.png"/>
-                        <span class = "link"> <a style = "color: beige; text-decoration: none" href = "google.com"> byte. </a> </span>
+                    <div class="websitelogo">
+                        <a href="./main.html"><img src="./images main/byte_logo.png"/></a>
+                        <span class = "link"> <a style = "color: beige; text-decoration: none" href = "./main.html"> byte. </a> </span>
                     </div>
                 </div>
                 <div class="headersearchbar">
-                    <input type="search" class="searchbar" placeholder="Search byte" />
+                    <input type="search" class="searchbar" placeholder="Search byte"/>
                 </div>
                 <div class="headerprofile">
                     <div class="profile">
                         <div class="profileicon">
                             <div class="profileiconholder">
-                                <!-- ./images main/pfp.jpg -->
-                                <a href="profilepage.html"> <img src="./images main/pfp.jpg"/> </a>
+                                <a href="./profilepage2.html">
+                                <img src="./images main/pfp.jpg"/>
+                                </a>
                             </div>
                         </div>
                         <div class="profilecontainer">
                             <div class="profiledisplayname">
-                                <a href="profilepage.html"> <span>gojowithiphone</span> </a>
+                                <span>gojowithiphone</span>
                             </div>
                             <div class="profilehandlename">
-                                <a href="profilepage.html"> 
                                 <span>u/gojo1234</span>
-                                </a>
                             </div>
                         </div>
                     </div>
-                    <div class="topbuttons"> 
-                        <a href=""> Log out </a>
+                    <div class="topbuttons">
+                        <a href="./main_not_logged.html"> Log out </a>
                     </div>
+                </div>
             </div>
         </div>
-    </div>
-<div class="mainpage"> 
-<div class="postcontainer">
-    <div class="userinfo">
-        <div class="postcommunity"> 
-            <h5> b/Apple </h5>
+        <div class="mainpage"> 
+        <div class="postcontainer">
+            <div class="userinfo">
+                <div class="postcommunity"> 
+                    <h5> b/Apple </h5>
+                </div>
+                <div class ="userpfp">
+                    <a href="profilepage2.html"> <img class="userimg" src="./images main/pfp.jpg"> </a>
+                    
+                </div>
+                <div class="postuserinfo"> 
+                    <p> gojowithiphone <br><span class="userhandle"> u/gojo1234</span><br> Bits: Infinite </p>
+                </div>
+                <div class="postdate"> 
+                    <h5> Posted on: February 8, 2024</h5>
+                    <p> 8 days ago </p>
+                </div>
+            </div>
+            <div class="postinfocontainer">
+                <h4> Apple just dropped the new iPhone 16!!!</h4>
+                <p> it good :D</p>
+                <img src="./images main/gojowithiphone1.png">
+                <div class="replybutton"> <a href=""> Reply </a> </div>
+            </div>
         </div>
-        <div class ="userpfp">
-            <a href="profilepage2.html"> <img class="userimg" src="./images main/pfp.jpg"> </a>
-            
-        </div>
-        <div class="postuserinfo"> 
-            <p> gojowithiphone <br><span class="userhandle"> u/gojo1234</span><br> Bits: Infinite </p>
-        </div>
-        <div class="postdate"> 
-            <h5> Posted on: February 8, 2024</h5>
-            <p> 8 days ago </p>
-        </div>
-    </div>
-    <div class="postinfocontainer">
-        <h4> Apple just dropped the new iPhone 16!!!</h4>
-        <p> it good :D</p>
-        <img src="./images main/gojowithiphone1.png">
-        <div class="replybutton"> <a href=""> Reply </a> </div>
-    </div>
-</div>
 
-
+     </div>
 </div>
 </body>
 
